--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "ios": "react-native run-ios",
     "web": "react-scripts start",
     "start": "react-native start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
     "test": "jest",
     "lint": "eslint ."
   },
